--- a/base64.html
+++ b/base64.html
@@ -21,8 +21,7 @@
         <br/>
         <p class="text">
             usage: require("base64")<br/>
-            this... just a base64 library<br/>
-            the maximum amount of data processed by the base64 library is 16 kilobytes
+            this... just a base64 library
         </p>
 
         <p class="text">methods:</p>
