--- a/components.html
+++ b/components.html
@@ -37,6 +37,7 @@
             <a class="hyper" href="./synthesizer.html"><li><span>synthesizer</span></li></a>
             <a class="hyper" href="./radarDetector.html"><li><span>radarDetector</span></li></a>
             <a class="hyper" href="./pistonController.html"><li><span>pistonController</span></li></a>
+            <a class="hyper" href="./rom.html"><li><span>rom disk</span></li></a>
         </ul>
     </body>
 </html>
