--- a/libraries.html
+++ b/libraries.html
@@ -28,6 +28,7 @@
             <a class="hyper" href="./image.html"><li><span>image</span></li></a>
             <a class="hyper" href="./json.html"><li><span>json</span></li></a>
             <a class="hyper" href="./midi.html"><li><span>midi</span></li></a>
+            <a class="hyper" href="./nbs.html"><li><span>nbs (NEW!)</span></li></a>
             <a class="hyper" href="./objs.html"><li><span>objs</span></li></a>
             <a class="hyper" href="./ramfs.html"><li><span>ramfs</span></li></a>
             <a class="hyper" href="./styles.html"><li><span>styles</span></li></a>
