--- a/midi.html
+++ b/midi.html
@@ -23,6 +23,7 @@
             usage: require("midi")<br/>
             the midi library allows you to play midi files on synthesizers. you can load a midi file from a disk or binary string<br/>
             if you want to somehow transfer the sound from the library to another source, provide it with the virtual synthesizer API (you will have to do it yourself)<br/>
+            attention. this library may not understand some midi formats and may not perceive instruments correctly. It is better to use a library for reproducing <a class="hyper" href="nbs.html">NBS</a> files instead<br/>
         </p>
 
         <p class="text">methods:</p>
