--- a/api.html
+++ b/api.html
@@ -137,6 +137,8 @@
             creative hard drive has a volume of 1024 MB, but does not save data after re-entry and when saving.
             <br/>
             if you need to save large amounts of data to a disk, then you can use the <a href="addons.html#world_disks" class="hyper">"world disks"</a> addon.
+            <br/>
+            if you need to distribute a large amount of data along with your creation in the workshop, you can use <a href="rom.html" class="hyper">"ROM disk"</a>
         </ul>
 
         <br/>
