--- a/disk.html
+++ b/disk.html
@@ -27,6 +27,7 @@
             you can use the <a href="addons.html#world_disks" class="hyper">"world disks"</a> addon, it saves data to the world and not to the blueprint. in this case, you can save a lot more data.<br/>
             there is a computer with a built-in disk. its embedded disk is always identified under the first ID in the disk component table. the connected external drive will already be the second one<br/>
             please note that this filesystem allows a folder and a file with the same name to exist<br/>
+            if you need to transfer a large amount of data along with your creation to the steam workshop, you can use a <a href="rom.html" class="hyper">"ROM disk"</a><br/>
             component name - disk
         </p>
 
@@ -35,6 +36,7 @@
             <li><span>disk.clear() - clears the disk</span></li>
             <li><span>disk.getUsedSize():number - reads how much space is used on the disk in bytes</span></li>
             <li><span>disk.getMaxSize():number - returns the maximum amount of data that can be written to disk in bytes</span></li>
+            <li><span>disk.isReadOnly():boolean - returns whether the file system is read-only. it is always false at the moment</span></li>
             <br/>
             <li><span>disk.getData():string - reads a line from a .fastsave file, if there is no such file yet, returns an empty line</span></li>
             <li><span>disk.setData(string) - saves a string to a .fastsave file</span></li>
@@ -56,6 +58,5 @@
             <li><span>disk.getFileList(path):table - returns a list of files in the current directory</span></li>
             <li><span>disk.getFolderList(path):table - returns a list of directories in the current directory</span></li>
         </ul>
-        </pre>
     </body>
 </html>
