--- a/synthesizer.html
+++ b/synthesizer.html
@@ -24,6 +24,7 @@
             you can also run loop effects that will simulate engine sounds<br/>
             the maximum number of audio effects that can be transmitted in 1 tick is 16<br/>
             the maximum number of simultaneously fired loop effects is 4<br/>
+            number of simultaneously loaded samples: 32<br/>
             component name - synthesizer
         </p>
 
@@ -32,8 +33,12 @@
         <ul class="list">
             <li><span></span>synthesizer.stop() - stops all currently playing sounds (does not touch loop sounds)</li>
             <li><span></span>synthesizer.clear() - clears the sound buffer</li>
-            <li><span></span>synthesizer.addBeep(device:number|nil, pitch:number|nil, volume:number|nil (in fact, it starts the same sound several times, from 1 to 10 it is not recommended to set this parameter to more than 0.3), duration:number|nil) - adds sound to the buffer</li>
+            <li><span></span>synthesizer.delBeep(index:number) - cancels addBeep with the passed index</li>
+            <li><span></span>synthesizer.addBeep(device:number|nil, pitch:number|nil, volume:number|nil (in fact, it starts the same sound several times, from 1 to 10 it is not recommended to set this parameter to more than 0.3), duration:number|nil):index - adds sound to the buffer</li>
             <li><span></span>synthesizer.flush() - sends the audio buffer to clients, but does not clear it. do not forget to clear the buffer yourself so as not to overflow it</li>
+            <li><span></span>synthesizer.flushWithStop() - it works the same way as flush, but stops playback of all previously started sounds that were not updated in this call</li>
+            <li><span></span>synthesizer.flushWithBind() - it works the same way as flush, but it doesn't restart sounds with similar instruments that are already playing, instead it updates them with the remaining time</li>
+            
         </ul>
 
         <br/>
@@ -45,6 +50,18 @@
             <li><span>synthesizer.startLoop(slot:number, loopname:string, params:table|string) - triggers a loop effect in the specified slot (from 1 to 4) with the specified name and specified parameters</span></li>
             <li><span>synthesizer.stopLoop(slot:number) - stops the loop effect in a certain slot</span></li>
             <li><span>synthesizer.setLoopParams(slot:number, params:table) - sets the parameters for the running loop effect in the specified slot</span></li>
+        </ul>
+
+        <br/>
+        <p class="text">sample api (works only with <a class="hyper" href="https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610">betterAPI</a>):</p>
+        <ul class="list">
+            <li><span>synthesizer.loadSampleFromTTS(slot:number (1-32), text:string) - loads a sample from TTS</span></li>
+            <li><span>synthesizer.loadSampleFromURL(slot:number (1-32), url:string) - loads a sample from URL</span></li>
+            <li><span>synthesizer.startSample(slot:number (1-32)) - start the sample</span></li>
+            <li><span>synthesizer.stopSample(slot:number (1-32)) - stop the sample</span></li>
+            <li><span>synthesizer.pauseSample(slot:number (1-32)) - pause the sample</span></li>
+            <li><span>synthesizer.loopSample(slot:number (1-32), state:boolean) - enables or disables sample looping</span></li>
+            <li><span>synthesizer.setSampleVolume(slot:number (1-32), volume (0-1)) - set the sample volume</span></li>
         </ul>
 
         <pre>
@@ -79,6 +96,41 @@ function callback_loop()
         oldBeep = currentBeep
     end
     tick = tick + 1
+end</code>
+        </pre>
+
+        <pre>
+            <code class="language-lua" style="width: fit-content;">--the sample api requires a betterAPI to work!
+--https://steamcommunity.com/sharedfiles/filedetails/?id=3177944610
+--https://igorkll.github.io/synthesizer.html
+
+local timerhost = require("timer").createHost()
+local synthesizer = getComponent("synthesizer")
+
+synthesizer.loadSampleFromTTS(1, "hello world")
+synthesizer.loadSampleFromTTS(2, "danger")
+synthesizer.loadSampleFromTTS(3, "evacuation")
+
+local timer = timerhost:createTimer(40, false, function ()
+    synthesizer.startSample(1)
+
+    local timer = timerhost:createTimer(80, false, function ()
+        synthesizer.startSample(2)
+
+        local timer = timerhost:createTimer(40, true, function ()
+            synthesizer.startSample(3)
+        end)
+        timer:reset()
+        timer:setEnabled(true)
+    end)
+    timer:reset()
+    timer:setEnabled(true)
+end)
+timer:reset()
+timer:setEnabled(true)
+
+function callback_loop()
+    timerhost:tick()
 end</code>
         </pre>
     </body>
