--- a/vdisplay.html
+++ b/vdisplay.html
@@ -24,11 +24,14 @@
             this library allows you to create a virtual display<br/>
             all you have to do is implement a couple of callbacks to create your own display!<br/>
             do you want to make a display of the whole sky using a holographic projector? easy! Do you want to combine multiple displays into one to get a super display? no problems<br/>
+            you can use this to combine multiple displays into one<br/>
         </p>
 
         <p class="text">methods:</p>
         <ul class="list">
             <li><span>vdisplay.create(callbacks, width, height):vdisplayObject - creates a virtual display</span></li>
+            <li><span>vdisplay.touchscreen(vdisplayObject):function(x:number, y:number, state:string, button:number, nickname:string) - adds a virtual touchscreen for a virtual display</span></li>
+            <li><span>vdisplay.bundle(displays:table, numberDisplaysByWidth:number):vdisplayObject - combines many displays of the same resolution into one large display. It combines all the functions of displays, including the touchscreen. pass the table with the displays from the upper-left edge to the lower-right edge from top to bottom and the number of displays by width</span></li>
         </ul>
 
         <p class="text">callbacks:</p>
@@ -83,6 +86,18 @@ function callback_loop()
     end
     ]]
 end</code>
+        </pre>
+
+        <pre>
+            <code class="language-lua" style="width: fit-content;">--combines many displays into one display
+local vdisplay = require("vdisplay")
+local displays = getComponents("display")
+
+local numberDisplaysByWidth = 4
+
+setComponentApi("display", vdisplay.bundle(displays, numberDisplaysByWidth))
+
+function callback_loop() end</code>
         </pre>
     </body>
 </html>
