added new font and update hologram

--- a/fonts.html
+++ b/fonts.html
@@ -121,6 +121,7 @@ end</code>
             lgc_5x4 - the standard font for monitors. it will be setted if you pass nil to display.setFont (monospaced)<br/>
             lgc_5x5 - just a 5x5 (square) font (monospaced)<br/>
             lgc_3x3 - just a 3x3 (square) font (monospaced)<br/>
+			oc_16x8 - font from the opencomputers mod for minecraft. almost monospaced, but has double-width characters<br/>
         </p>
         <br/>
 
