--- a/smserver/index.html
+++ b/smserver/index.html
@@ -104,6 +104,12 @@
 				</li>
 			</ul>
 
+			<h2>FAQ (Frequently Asked Questions):</h2>
+			<div class="faq">
+				<h3>Q: What should I do if all blocks from the mods are mixed up?</h3>
+				<p>A: Unsubscribe from all the mods listed on the server's and then resubscribe to them.</p>
+			</div>
+
 			<h2>Commands:</h2>
 			<ul>
 				<li>1. <code>/tpa (nickname)</code> - send a request to teleport you to a player. They can accept using <code>/accept</code></li>
