--- a/smserver/index.html
+++ b/smserver/index.html
@@ -110,6 +110,11 @@
 				<p>A: Unsubscribe from all the mods listed on the server's and then resubscribe to them.</p>
 			</div>
 
+			<h2>Additional Server Content:</h2>
+			<ul>
+				<li>1. Ender Chest - press E to open your ender chest which is linked to your nickname (you need to set a password for your nickname using /reg) or press U to open a public ender chest which is the same for the entire server</li>
+			</ul>
+
 			<h2>Commands:</h2>
 			<ul>
 				<li>1. <code>/tpa (nickname)</code> - send a request to teleport you to a player. They can accept using <code>/accept</code></li>
