--- a/smserver/index.html
+++ b/smserver/index.html
@@ -108,6 +108,10 @@
 			<div class="faq">
 				<h3>Q: What should I do if all blocks from the mods are mixed up?</h3>
 				<p>A: Unsubscribe from all the mods listed on the server's and then resubscribe to them.</p>
+				<h3>Q: I can't log in to the server, what should I do?</h3>
+				<p>A: make sure that your nickname meets the server requirements. try changing it, and if that doesn't help, contact tech support (sm coders community > 💥server).</p>
+				<h3>Q: I forgot my nickname password and I can't log in to the server, what should I do?</h3>
+				<p>A: change your nickname on steam. you will not lose your inventory and position in the world, but you will lose access to everything that is tied to your nickname (for example, Ender's chest)</p>
 			</div>
 
 			<h2>Additional Server Content:</h2>
@@ -137,8 +141,8 @@
 			</ul>
 
 			<h2>Additional Information:</h2>
-			<p>Discord server: <a href="https://discord.gg/uJrsmUjaMG" target="_blank">https://discord.gg/uJrsmUjaMG</a></p>
-			<p>Connection: Add the bot as a friend on Steam: <a href="https://steamcommunity.com/profiles/76561199809172866/" target="_blank">https://steamcommunity.com/profiles/76561199809172866/</a></p>
+			<p>Discord server: <a href="https://discord.gg/uJrsmUjaMG" target="_blank">sm coders community</a></p>
+			<p>Connection: Add the bot as a friend on Steam: <a href="https://steamcommunity.com/profiles/76561199809172866/" target="_blank">sm coders server</a></p>
 			<p>Friend code: <strong>1848907138</strong></p>
 		</div>
 	</body>
