--- a/smserver/index.html
+++ b/smserver/index.html
@@ -134,7 +134,7 @@
 				<li>3. <code>/accept (id(default: 1))</code> - accept any action</li>
 				<li>4. <code>/decline (id(default: 1))</code> - decline any action</li>
 				<li>5. <code>/online</code> - displays the list of players in the game in the local chat</li>
-				<li>6. <code>/pos</code> - displays your position in the chat</li>
+				<li>6. <code>/pos</code> - displays your position in the local chat</li>
 				<li>7. <code>/rtp</code> - teleports to a random point on the map</li>
 				<li>8. <code>/reg (password) (accept password)</code> - sets the password on your nickname</li>
 				<li>9. <code>/passwd (old password) (new password) (accept password)</code> - changes the password on your nickname</li>
