--- a/smserver/index.html
+++ b/smserver/index.html
@@ -126,6 +126,14 @@
 			<h2>Additional Server Content:</h2>
 			<ul>
 				<li>1. Ender Chest - press E to open your ender chest which is linked to your nickname (you need to set a password for your nickname using /reg) or press U to open a public ender chest which is the same for the entire server</li>
+				<li>2. Generator - Plug it into the battery containers and SPIN, SPIN, SPIN!!!!</li>
+			</ul>
+
+			<h2>Changes In The Game:</h2>
+			<ul>
+				<li>1. increased drop from robots</li>
+				<li>2. scrap metal from haybot drops out as an item</li>
+				<li>3. totebot head drop out as an item</li>
 			</ul>
 
 			<h2>Commands:</h2>
@@ -140,6 +148,7 @@
 				<li>8. <code>/reg (password) (accept password)</code> - sets the password on your nickname</li>
 				<li>9. <code>/passwd (old password) (new password) (accept password)</code> - changes the password on your nickname</li>
 				<li>10. <code>/login (password)</code> - used to enter the password for your nickname when logging onto the server</li>
+				<li>11. <code>/ping</code> - outputs a ping on the server. It sends a packet to the server and receives a response, outputting a ping in both directions.</li>
 			</ul>
 
 			<h2>Nickname Requirements:</h2>
@@ -147,6 +156,7 @@
 				<li>1. Maximum length of 20 characters</li>
 				<li>2. Do not use spaces or special characters</li>
 				<li>3. Only small and capital Latin letters, numbers, and symbols: _ - . are allowed</li>
+				<li>4. At least two characters must be a letter or a number</li>
 			</ul>
 
 			<h2>Additional Information:</h2>
