--- a/smserver/index.html
+++ b/smserver/index.html
@@ -96,20 +96,20 @@
 			<h2>Mods:</h2>
 			<ul>
 				<li>
-					1. server software 
-					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3440826317" target="_blank">Link</a>
+					1.
+					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3440826317" target="_blank">server software</a>
 				</li>
 				<li>
-					2. SComputers [Fork] 
-					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596" target="_blank">Link</a>
+					2.
+					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2949350596" target="_blank">SComputers [Fork]</a>
 				</li>
 				<li>
-					3. online boombox 
-					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679" target="_blank">Link</a>
+					3.
+					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3185287679" target="_blank">online boombox</a>
 				</li>
 				<li>
-					4. Wired & Wireless Cameras 
-					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3034272798" target="_blank">Link</a>
+					4.
+					<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3034272798" target="_blank">Wired & Wireless Cameras</a>
 				</li>
 			</ul>
 
