--- a/smserver/index.html
+++ b/smserver/index.html
@@ -127,6 +127,7 @@
 			<ul>
 				<li>1. Ender Chest - press E to open your ender chest which is linked to your nickname (you need to set a password for your nickname using /reg) or press U to open a public ender chest which is the same for the entire server</li>
 				<li>2. Generator - Plug it into the battery containers and SPIN, SPIN, SPIN!!!!</li>
+				<li>3. Sun-Light Panel - Plug it into the battery containers and  wait... wait... wait...</li>
 			</ul>
 
 			<h2>Changes In The Game:</h2>
