--- a/camera.html
+++ b/camera.html
@@ -145,6 +145,8 @@
                 harvestable = boolean<br/>
             }) - sets the list of objects that the camera will see, by default, all are selected</span></li>
             <li><span>getDetectableObjects():table - returns a reference to the last table passed to setDetectableObjects. However, if you edit it, you must send it to setDetectableObjects again so that the camera can see the changes.</span></li>
+			<li><span>setImageRotation(rotation:number) - sets the image rotation in radians (default is 0)</span></li>
+			<li><span>getImageRotation():number - returns image rotation in radians (by default 0)</span></li>
         </ul>
 
         <br/>
