--- a/minimap_component.html
+++ b/minimap_component.html
@@ -8,8 +8,8 @@
         <link href="highlight.css" rel="stylesheet">
         <script src="highlight.js"></script>
         <script>
-			hljs.highlightAll();
-		</script>
+            hljs.highlightAll();
+        </script>
     </head>
     <body>
         <a class="text" href="index.html">main page</a>
@@ -43,14 +43,17 @@
         <ul class="list">
             <li><span>camera.setMinimapHeight(height:number) - sets the height of the camera in meters</span></li>
             <li><span>camera.getMinimapHeight():number</span></li>
-            <li><span>camera.setMinimapRotation(rotation:number) - sets the rotation of the minimap in radians</span></li>
-            <li><span>camera.getMinimapRotation():number</span></li>
+            <li><span>camera.setMinimapRotation(rotation:number, rotateSync:boolean(default: true)) - the first argument works the same way as camera.setImageRotation, and the second one indicates whether the rotation will be tied to the rotation of the minimap block (default: true)</span></li>
+            <li><span>camera.getMinimapRotation():number, boolean</span></li>
             <li><span>camera.setIsometricRender(enable:boolean) - enables or disables isometric rendering. when the isometric render is enabled, instead of fov and height, you need to change isometric size using setIsometricSize. and it is better to set the height to 1000 (in order to see high-rise creations) fov does not affect anything in this mode</span></li>
             <li><span>camera.isIsometricRender():boolean</span></li>
             <li><span>camera.setIsometricSize(isometricSize:float, isometricSize:float) - changes the size of the area captured by the isometric renderer</span></li>
             <li><span>camera.getIsometricSize():float, float</span></li>
             <li><span>camera.setMinimapOffset(number, number) - sets the offset of the minimap relative to the minimap block</span></li>
             <li><span>camera.getMinimapOffset():number, number</span></li>
+            <li><span>camera.getWaypoints(width, height):{{x, y, color}, ...} - searches for all labels for a specific monitor resolution. all of them get a position on a specific point of the monitor - accordingly, they are not relevant for long</span></li>
+            <li><span>camera.drawWaypoints(display, drawer:function(display, waypoint)) - draws all the waypoints on the monitor in a pre-prepared way. if you do not pass the drawer function, then the rendering will take place in the form of ordinary circles</span></li>
+            <li><span>camera.getRealRotation(display):number - returns the actual rotation of the minimap</span></li>
         </ul>
 
         <pre>
@@ -69,10 +72,18 @@ local cameraStep = 512
 camera.setStep(512)
 camera.setDistance(2048)
 camera.setMinimapOffset(0, 0)
+camera.setMinimapRotation(0, true)
+
+local function rotateVector(x, y, angle)
+    local x_new = x * math.cos(angle) - y * math.sin(angle)
+    local y_new = x * math.sin(angle) + y * math.cos(angle)
+    return x_new, y_new
+end
 
 local zoneSize = 64
 local offsetX, offsetY = 0, 0
 local isometric
+local waypoints = true
 local function setIsometric(_isometric)
     isometric = _isometric
     camera.setIsometricRender(isometric)
@@ -101,14 +112,18 @@ local gui = require("gui").new(display)
 local pressedPosX, pressedPosY
 local scene = gui:createScene(function ()
     camera.drawAdvanced(display, renderSettings)
+    if waypoints then
+        camera.drawWaypoints(display)
+    end
 end, function (_, click)
     if click[3] == "pressed" then
         pressedPosX, pressedPosY = click[1], click[2]
     elseif click[3] == "drag" then
         if pressedPosX then
             local perPixel = zoneSize / display.getHeight()
-            offsetX = offsetX + ((click[2] - pressedPosY) * perPixel)
-            offsetY = offsetY + ((click[1] - pressedPosX) * perPixel)
+            local lOffsetX, lOffsetY = rotateVector(((click[2] - pressedPosY) * perPixel), ((click[1] - pressedPosX) * perPixel), -camera.getRealRotation())
+            offsetX = offsetX + lOffsetX
+            offsetY = offsetY + lOffsetY
             pressedPosX, pressedPosY = click[1], click[2]
             camera.setMinimapOffset(offsetX, offsetY)
         end
@@ -119,16 +134,28 @@ scene:setAlwaysRedraw(true)
 local isometricSwitch = scene:createButton(2, 2, 16, fheight + 2, true, nil, "444444", "ffffff", "ee2222", "ffffff")
 isometricSwitch.state = isometric
 isometricSwitch:setCustomStyle(styles.switch)
-local isometricSwitchText = scene:createText(nil, nil, "isometric")
-isometricSwitchText.sizeY = fheight
-isometricSwitchText:setCenterRight(isometricSwitch, 3)
-
 isometricSwitch:attachCallback(function (_, state)
     setIsometric(state)
 end)
 
-local increaseScale = scene:createButton(2, 2, 8, 8, false, "+")
-increaseScale:setDown(isometricSwitch, 3)
+local isometricSwitchText = scene:createText(nil, nil, "isometric")
+isometricSwitchText.sizeY = fheight
+isometricSwitchText:setCenterRight(isometricSwitch, 3)
+
+local waypointsSwitch = scene:createButton(nil, nil, 16, fheight + 2, true, nil, "444444", "ffffff", "ee2222", "ffffff")
+waypointsSwitch:setDown(isometricSwitch, 3)
+waypointsSwitch.state = waypoints
+waypointsSwitch:setCustomStyle(styles.switch)
+waypointsSwitch:attachCallback(function (_, state)
+    waypoints = state
+end)
+
+local waypointsSwitchText = scene:createText(nil, nil, "waypoints")
+waypointsSwitchText.sizeY = fheight
+waypointsSwitchText:setCenterRight(waypointsSwitch, 3)
+
+local increaseScale = scene:createButton(nil, nil, 8, 8, false, "+")
+increaseScale:setDown(waypointsSwitch, 3)
 increaseScale:attachCallback(function (_, state)
     if state then
         zoneSize = zoneSize + 16
@@ -140,7 +167,7 @@ increaseScale:attachCallback(function (_, state)
     end
 end)
 
-local reduceScale = scene:createButton(2, 2, 8, 8, false, "-")
+local reduceScale = scene:createButton(nil, nil, 8, 8, false, "-")
 reduceScale:setRight(increaseScale, 2)
 reduceScale:attachCallback(function (_, state)
     if state then
@@ -157,7 +184,7 @@ local zoneText = scene:createText()
 zoneText.sizeY = fheight
 zoneText:setCenterRight(reduceScale, 2)
 
-local increaseStep = scene:createButton(2, 2, 8, 8, false, "+")
+local increaseStep = scene:createButton(nil, nil, 8, 8, false, "+")
 increaseStep:setDown(increaseScale, 3)
 increaseStep:attachCallback(function (_, state)
     if state then
@@ -170,7 +197,7 @@ increaseStep:attachCallback(function (_, state)
     end
 end)
 
-local reduceStep = scene:createButton(2, 2, 8, 8, false, "-")
+local reduceStep = scene:createButton(nil, nil, 8, 8, false, "-")
 reduceStep:setRight(increaseStep, 2)
 reduceStep:attachCallback(function (_, state)
     if state then
@@ -186,6 +213,16 @@ end)
 local scaleText = scene:createText()
 scaleText.sizeY = fheight
 scaleText:setCenterRight(reduceStep, 2)
+
+local resetOffset = scene:createButton(nil, nil, nil, 8, false, "RESET OFFSET")
+resetOffset:setDown(increaseStep, 2)
+resetOffset:attachCallback(function (_, state)
+    if state then
+        offsetX = 0
+        offsetY = 0
+        camera.setMinimapOffset(offsetX, offsetY)
+    end
+end)
 
 function changeSpeed()
     scaleText:clear()
