--- a/env.html
+++ b/env.html
@@ -174,6 +174,7 @@ function callback_loop() end</code>
         <br/><a name="getComponentsByLabel"></a><p class="text">getComponentsByLabel(componentType:string, label:string) -> table - returns a table of components with the specified label</p>
         <br/><p class="text">clientInvoke(code: str, args...) - performs invokation some code on clients(unsafe mode only)</p>
         <br/><p class="text">clientInvokeTo(player_nickname/playerobj, code: str, args...) - performs invokation some code on client(unsafe mode only)</p>
+		<br/><p class="text">serverInvoke(code: str, args...) - calls the code on the server side from the client. available only from the code executed from clientInvoke (unsafe mode only)</p>
         <br/><p class="text">input(color: [str | nil]) -> bool - input selector (if color specified); returns true if one on selected inputs is true else returns false</p>
         <br/><p class="text">ninput(color: [str | nil]) -> table[num] - if color specified returns table of parent interactable powers; if no color - returns full table of powers</p>
         <br/><p class="text">out(value: [num | bool]) - set power and active state of self.interactable</p>
