--- a/display.html
+++ b/display.html
@@ -139,10 +139,13 @@
             <li><span>display.setMaterial(material:number) - sets the display material</span></li>
             <li><span>display.getMaterial():number - returns the current display material</span></li>
             <li><span>display.getDefaultMaterial():number - returns the default material for this display</span></li>
+			<br/>
+			<li><span>display.getDefaultResolution():x, y - gets the resolution of the display that is on it by default</span></li>
+			<li><span>display.setResolution(x:number, y:number) - changes the display resolution. on the world display or unrestricted display, you can set the resolution up to 4096x4096. On conventional displays, you can only set the resolution that meets two conditions: do not exceed the maximum number of pixels of the standard resolution, none of the resolution sides should exceed the maximum side of the standard resolution</span></li>
         </ul>
 
         <br/>
-        <p class="text">only for holographic/world displays:</p>
+        <p class="text">only for holographic/world/unrestricted displays:</p>
         <ul class="list">
             <li><span>display.setHoloOffset(x, y, z) - changes the displacement of the hologram relative to the display. the maximum offset is 5</span></li>
             <li><span>display.getHoloOffset():x, y, z - returns the value set using display.setOffset</span></li>
@@ -150,12 +153,6 @@
             <li><span>display.getHoloRotation():x, y, z - returns the value set using display.setRotation</span></li>
             <li><span>display.setHoloScale(x, y) - sets the scale of the hologram. the maximum scale is 5</span></li>
             <li><span>display.getHoloScale():x, y - returns the value set using display.setScale</span></li>
-        </ul>
-		
-		<br/>
-        <p class="text">only for world/unrestricted displays:</p>
-        <ul class="list">
-            <li><span>display.setResolution(x:number, y:number) - changes the display resolution in real time</span></li>
         </ul>
 
         <pre>
