--- a/wasd.html
+++ b/wasd.html
@@ -34,6 +34,11 @@
             <li><span>wasd.isD():boolean - returns true if the D button is pressed</span></li>
             <li><span>wasd.getADvalue():float - returns float from -1 to 1. in fact, the angle of the steering wheel</span></li>
             <li><span>wasd.getWSvalue():float - returns a value from -1 to 1, that is, the direction of the desired movement</span></li>
+			<li><span>wasd.isMouseL():boolean - returns the state of the left mouse button while the player is in the seat (it often only works with betterAPI)</span></li>
+			<li><span>wasd.isMouseC():boolean - returns the state of the middle mouse button (requires betterAPI)</span></li>
+			<li><span>wasd.isMouseR():boolean - returns the state of the right mouse button while the player is in the seat (it often only works with betterAPI)</span></li>
+			<li><span>wasd.isQ():boolean - outputs a pulse signal when the Q button is pressed in the seat (if you have any mod installed that uses this (for example, font mod), it will only work with betterAPI)</span></li>
+			<li><span>wasd.isR():boolean - outputs a pulse signal when the R button is pressed in the seat (if you have any mod installed that uses this (for example, font mod), it will only work with betterAPI)</span></li>
         </ul>
     </body>
 </html>
