--- a/xEngine.html
+++ b/xEngine.html
@@ -29,6 +29,7 @@
             also, the maximum size of the X and Y area is 64 meters, and you cannot create objects outside of this space.<br/>
             if any object crosses the Z boundary less than 0 or more than 64, or on any axis more than 64, then it immediately disappears<br/>
             if you create several shapes in 1 tick, the distance between spawn points should be greater than 0.2 (otherwise you will get an exception)<br/>
+			limitations on the size of the 64-meter engine area do not mean that you cannot create large game worlds. You'll just have to write your own algorithm for loading locations and load only the area where the player is located if you need it.<br/>
         </p>
 
         <p class="text">methods & fields:</p>
@@ -81,10 +82,12 @@
             <li><span>engine:getMaxBudget():number - this is a constant, the budget of the engine. it is equal to 10000</span></li>
             <li><span>engine:getBudget():number - your current engine budget, you spend it on creating objects and get it back when they are destroyed. if you do not have enough budget to create an object, you will receive an exception</span></li>
             <li><span>engine:getAreaSize():number - returns the size of the engine area, it is a constant and it is equal to 64 meters</span></li>
+			<li><span>engine:getStaticObjectBudget():number - returns how much budget will be spent on creating a static object (1)</span></li>
+			<li><span>engine:getDynamicObjectBudget:number - returns how much budget will be spent on creating a dynamic object (50)</span></li>
             <li><span>engine:setGravity(number) - sets the gravity level from -3 to 3 (default: 1)</span></li>
             <li><span>engine:getGravity():number - returns the value set using engine:setGravity() (default: 1)</span></li>
             <li><span>engine:list():{engineShape, ...} - returns a list of all objects available to the engine</span></li>
-            <li><span>engine:raycast(startPos:vec3, endPos:vec3):{object = engineShape, distance = number} - launches a raycast beam from one position to another, if it hits an object, it returns a table with the distance and the object itself</span></li>
+            <li><span>engine:raycast(startPos:vec3, endPos:vec3):{object = engineShape, distance = number, fraction = number, pointWorld = vec3, normalWorld = vec3} - launches a raycast beam from one position to another, if it hits an object, it returns a table with the distance and the object itself</span></li>
         </ul>
 
         <p class="text">engineShape object:</p>
